hack to try and fix blown up modals on small screens

--- a/octoprint_uicustomizer/static/css/uicustomizer.css
+++ b/octoprint_uicustomizer/static/css/uicustomizer.css
@@ -106,7 +106,6 @@
     /*fix modals on small screens*/
 	body.UICResponsiveMode .modal-body, body.UICResponsiveMode .modal-overflow .modal-body{
 		position: relative;
-    	max-height: 40px;
 		padding: 15px;
     	overflow-y: auto !important;
 	}
@@ -130,6 +129,14 @@
         max-width: calc(100vw - 200px) !important;
         right: 60px !important;
     }
+
+    /* try and prevent modals with oversize content from going nuts */
+    body.UICResponsiveMode div.modal-overflow{
+        max-height: 95vh !important;
+        margin-top: 2.5vh !important;
+        overflow: auto !important;
+    }
+
     /*fix input fields broken*/
 	body.UICResponsiveMode .search-query-with-clear .search-clear{
 		right: 28px !important;
